# KSR-Semantic-Representation-Method-for-Knowledge-Graph

./: .gitignore  Map_serialize.cpp  Map_serialize.hpp  README.md  main.cpp  makefile  map_serializer.cpp  map_serializer.hpp  progress_bar.cpp  progress_bar.hpp  rdf_parser.cpp  rdf_parser.hpp  triple_revealer.cpp
Clusterization/: Makefile  clusterization  clusterization.cpp  clusterization.hpp  main.cpp  retrieve_size  retrieve_size.cpp
Embedding/: CMakeLists.txt  DataModel.hpp  Embedding.sln  Embedding.vcxproj  Embedding.vcxproj.filters  Import.hpp  LatentModel.hpp  LatentModel_af.hpp  Model.hpp  ModelConfig.hpp  README.md  Storage.hpp  build.sh  embedding  embedding.cpp  makefile  packages.config
Embedding_af/: DataModel.hpp  Embedding_af.sln  Embedding_af.vcxproj  Embedding_af.vcxproj.filters  Import.hpp  LatentModel_af.hpp  Model.hpp  ModelConfig.hpp  Storage.hpp  embedding.cpp  makefile  packages.config
K-means/: Makefile  k_means.cpp  k_means.hpp  main.cpp
RDF_parser/: README.md  main.cpp  makefile  map_serializer.cpp  progress_bar.cpp  progress_bar.hpp  rdf_parser.hpp
Shuffle/: Makefile  main.cpp  triple_shuffle.cpp  triple_shuffle.hpp
entities_to_triples_cluster/: entites_to_triples_cluster.sh  entities_to_triples_cluster.cpp
entity_connection_analysis/: Makefile  entity_connection_analysis.cpp
filter/: triple_filter.cpp
garbage_entity_analysis/: garbage_entity_analysis.cpp
making_cluster/: Makefile  analysis  main.cpp
reindex/: main.cpp
significant_clusters/: find_significant.cpp  significant.sh  significant_clusters.cpp
